--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,7 @@ android.useAndroidX=true
 android.enableR8.fullMode=false
 gdxVersion=1.13.1
 projectVersion=1.0.0
+
+# EscapeLoop
+javaJwtVersion=4.5.0
+bouncycastleVersion=1.82
