Build and deploy Windows executable.

--- a/lwjgl3/build.gradle
+++ b/lwjgl3/build.gradle
@@ -122,6 +122,16 @@ construo {
     // human-readable name, used for example in the `.app` name for macOS
     humanName.set(appName)
 
+    // EscapeLoop
+    jlink {
+      guessModulesFromJar.set(false)
+      modules.addAll(
+        "java.base",
+        "java.logging",
+        "jdk.unsupported"
+      )
+    }
+
     targets.configure {
       register("linuxX64", Target.Linux) {
         architecture.set(Target.Architecture.X86_64)
